[package]
name = "rs"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
float-cmp = "0.8.0"
float-ord = "0.3.1"
hex = "0.4.3"
itertools = "0.10.1"
lazy_static = "1.4.0"
ntest = "0.7.3"
rand = "0.8.4"
serde = { version="1.0.126", features=["derive"] }
serde_json = "1.0.64"
sha3 = "0.9.1"
uint = "0.9.0"
actix-http = "3.0.0-beta.5"
actix-service = "2.0.0-beta.5"
actix-web = "4.0.0-beta.6"
reqwest = "0.11.4"
lapin = "1.7.1"
futures-util = "0.3.15"
tokio = "1.7.1"
