[package]
name = "rs"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
hex = "0.4.3"
float-cmp = "0.8.0"
float-ord = "0.3.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
ntest = "0.7.3"
# must use 0.6 - https://stackoverflow.com/questions/67082917/error-could-not-find-rng-in-rand-when-using-rust-crate-secp256k1
rand = {version = "0.6", features = ["std"]}
serde = { version="1.0.126", features=["derive"] }
serde_json = "1.0.64"
uint = "0.9.0"
reqwest = { version="0.11.4", features = ["json"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }

# pub sub
lapin = "1.7.1"

# server / async
actix-http = "3.0.0-beta.5"
actix-service = "2.0.0-beta.5"
actix-web = "4.0.0-beta.6"
futures-util = "0.3.15"
tokio = { version="1.7.1", features=["full"] }

# crypto
sha3 = "0.9.1"
secp256k1 = { version = "0.20.3", features=["rand","serde","bitcoin_hashes"] }

[dev-dependencies]
actix-rt = "2"
